# magic-sso

./: .dockerignore  .editorconfig  .fallowrc.json  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/: CODEOWNERS
docs/: MagicLinkSSO-Flow.puml  MagicLinkSSO-Gate-Flow.puml  MagicLinkSSO-Overview.puml  auth-options-comparison.md  cross-origin-cookie-audit.md  gate.md  hosted-auth-pages.md  local-dev-integration.md  managed-mode.md  manager-architecture.md  manager-operations.md  release-checklist.md  security-controls.md
examples/django/: .env.example  README.md  manage.py  package.json  pyproject.toml
examples/django/app/: asgi.py  settings.py  urls.py  wsgi.py
examples/django/hello/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
examples/django/hello/templates/: home.html  protected.html
examples/django/tests/: test_assets.py  test_project_layout.py  test_settings.py
gate/: .env.example  .env.prod.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  magic-gate.example.toml  package.json  tsconfig.json  vitest.config.ts
manager/: .env.example  .env.prod.example  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  magic-gate.prod.example.toml  manager.example.toml  manager.prod.example.toml  package.json  tsconfig.json  vitest.config.ts
scripts/: audit-python.mjs  audit-python.test.ts  (+22 more)
(+258 files in other folders)
